<resources xmlns:tools="http://schemas.android.com/tools">

	<string name="app_name" translatable="false">Translate Test</string>

	<!--TranslateFragment-->
	<string name="translateFragment_buttonTranslate">Translate</string>
	<string name="translateFragment_editTextInputHint">Enter text…</string>

	<string name="translateFragment_copyright" tools:ignore="TypographyQuotes"><![CDATA[Realized with help of services “<a href="http://translate.yandex.ru/">Yandex.Translate</a>” and “<a href="https://tech.yandex.ru/dictionary/">Yandex.Dictionary</a>”.]]></string>

	<string name="translateFragment_toast_errorNothingToTranslate">Nothing to translate</string>
	<string name="translateFragment_toast_errorNothingToAddToFavorites">Nothing to add to favorites</string>
	<string name="translateFragment_toast_errorTextTooLong">Translatable text is too long</string>

	<string name="translateFragment_textViewLettersCount" translatable="false">%s / 10000</string>

	<string name="trnslateFragment_langAdapter_detectLang">Detect language</string>

	<!--TranslationListFragment-->
	<string name="translationListFragment_ActionsDialog_title">Choose action</string>
	<string-array name="translationListFragment_ActionsDialog_actions">
		<item>Copy translation</item>
		<item>Delete translation</item>
	</string-array>

	<!--HistoryFragment-->
	<string name="historyFragment_textViewEmptyList">No translations have been added to history. Try to translate something.</string>

	<!--FavoritesFragment-->
	<string name="favoritesFragment_textViewEmptyList">No translations have been added to favorites. Try to translate something and click on button with a “heart”.</string>
	
	<!--Current lang code-->
	<string name="lang_code">en</string>

	<!--Screen Titles-->
	<string name="fragmentTranslate_title">Translate</string>
	<string name="fragmentHistory_title">History</string>
	<string name="fragmentFavorites_title">Favorites</string>
	<string name="activitySettings_title">Settings</string>
	<string name="activityLicense_title">About</string>

	<!--Toolbar Menu-->
	<string name="toolbarMenu_settings">Settings</string>
	<string name="toolbarMenu_license">License information</string>

	<!--Preferences-->
	<string name="activityPreference_apiKeysCategory_title">API keys</string>

	<string name="activityPreference_translateApiKey_title">Yandex.Translate API key</string>
	<string name="activityPreference_dictApiKey_title">Yandex.Dictionary API key</string>

	<string name="activityPreference_getDictKey_title">Get Yandex.Dictionary API key</string>
	<string name="activityPreference_getTranslateKey_title">Get Yandex.Translate API key</string>

	<string name="activityPreference_getKey_summary">Required Yandex account</string>

	<string name="activityPreference_getDictKeyUrl" translatable="false">https://tech.yandex.ru/keys/get/?service=dict</string>
	<string name="activityPreference_getTranslateKeyUrl" translatable="false">https://tech.yandex.ru/keys/get/?service=trnsl</string>
	<string name="activityPreference_notSet">Not set</string>

	<string name="activityPreference_translations_title">Translations</string>

	<string name="activityPreference_deleteHistory_title">Delete history</string>
	<string name="activityPreference_deleteFavorites_title">Delete favorites</string>

	<!--AlertDialog about invalid keys-->
	<string name="alertDialogInvalidKeys_keysNotSet_title">API keys not set</string>
	<string name="alertDialogInvalidKeys_keysNotSet_text">For use translate, you need to enter API keys for Yandex.Translate and Yandex.Dictionary in settings.</string>

	<string name="alertDialogInvalidKeys_wrongKeys_title">Wrong API keys</string>
	<string name="alertDialogInvalidKeys_wrongKeys_text">For use translate, you need to enter valid API keys in settings.</string>

	<string name="alertDialogInvalidKeys_bannedKeys_title">Blocked API keys</string>
	<string name="alertDialogInvalidKeys_bannedKeys_text">Keys you entered before has been blocked. For use translate, you need to enter valid API keys in settings.</string>

	<string name="alertDialogInvalidKeys_exceededDailyLimit_title">Daily limit exceeded</string>
	<string name="alertDialogInvalidKeys_exceededDailyLimit_text">You exceeded daily limit for using service. You can try again later, or enter another API keys in settings.</string>

	<string name="alertDialogInvalidKeys_networkError_title">Network error</string>
	<string name="alertDialogInvalidKeys_networkError_text">An network error occurred. Make sure you have a network connection and try again.</string>

	<string name="alertDialogInvalidKeys_langNotSupported_title">Translate dirrection not supported</string>
	<string name="alertDialogInvalidKeys_langNotSupported_text">This translate direction not supported.</string>

	<string name="alertDialogInvalidKeys_textTooLong_title">Text too long</string>
	<string name="alertDialogInvalidKeys_textTooLong_text">You entered too long translatable text. The maximum length is 10000 characters.</string>

	<string name="alertDialogInvalidKeys_unexpectedError_title">Error</string>
	<string name="alertDialogInvalidKeys_unexpectedError_text">Unexpected error. Please, try again later.</string>

	<string name="alertDialogInvalidKeys_exit_button">Exit</string>
	<string name="alertDialogInvalidKeys_tryAgain_button">Try again</string>
	<string name="alertDialogInvalidKeys_goToSettings_button">Go to settings</string>

	<!--AlertDialog for delete confirmation -->
	<string name="alertDialogConfirmation_youSure_title">You sure?</string>

	<string name="alertDialogConfirmation_deletingHistoryCannotBeUndone_title">Deleting history cannot be undone</string>
	<string name="alertDialogConfirmation_deletingFavoritesCannotBeUndone_title">Deleting favorites cannot be undone</string>

	<string name="alertDialogConfirmation_delete_button">Delete</string>
	<string name="alertDialogConfirmation_cancel_button">Cancel</string>

	<!--About-->
	<string name="about_author" translatable="false">by Alexander Zhukov</string>
	<string name="about_license">Licensed by WTFPL http://www.wtfpl.net/</string>
	<string name="about_otherLicenses">Components licenses:</string>

	<!--Misc-->
	<string name="misc_clipBoard_label">Translation</string>

</resources>
